--- a/style/style.css
+++ b/style/style.css
@@ -145,6 +145,7 @@
     margin: 0 auto;
     gap: 16px;
     margin-top: 44px;
+    margin-bottom: 120px;
  
 }
 .card-icon{
@@ -174,3 +175,58 @@
     color:rgba(98, 115, 130, 1);
 }
 
+
+/* banner */
+.banner{
+    display: flex;
+    width: 1360px;
+    height: 600px;
+    justify-content: center;
+    text-align: left;
+    align-items: center;
+    margin: auto;
+    gap: 60px;
+    
+}
+
+.banner-contain{
+    width: 700;
+    height: 396;
+}
+.banner-contain h5{
+    color: rgb(70, 145, 101, 1);
+    text-align: left;
+    font-size: 16px;
+    margin-bottom: 16px;
+}
+.banner-contain h1{
+width: 700px;
+height: 116px;
+font-size: 48px;
+font-style: bold;
+text-align: left;
+}
+.banner-contain p {
+     margin-top:16px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    color:rgba(98, 115, 130, 1);
+    margin-bottom: 40px;
+}
+.banner img{
+    border-radius: 12px;
+}
+.banner-text{
+    margin-bottom:18px ;
+    display: flex;
+    gap: 6px;
+    font-weight: 500;
+    text-align: left;
+
+}
+
+.last-main{
+    border: 2px solid red;
+    
+}
