--- a/style/style.css
+++ b/style/style.css
@@ -73,7 +73,7 @@
     margin-top: 16px;
     margin-bottom:16px;
 }
-.hero-btn1{
+.hero-btn1, .main-btn{
  display: inline-flex;
     align-items: center;
     gap: 8px;
@@ -86,6 +86,18 @@
     margin: 32px;
     color: white;
    
+}
+
+.main-btn{
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    background:rgba(70, 145, 101, 1);
+    color: white;
+    border-radius: 4px;
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
+    background: var(--#30B868, rgba(70, 145, 101, 1));
 }
 
 .hero-btn2{
@@ -207,12 +219,18 @@ font-style: bold;
 text-align: left;
 }
 .banner-contain p {
-     margin-top:16px;
+    margin-top:16px;
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
     color:rgba(98, 115, 130, 1);
     margin-bottom: 40px;
+}
+.last-main p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    color:rgba(98, 115, 130, 1);
 }
 .banner img{
     border-radius: 12px;
@@ -227,6 +245,16 @@ text-align: left;
 }
 
 .last-main{
-    border: 2px solid red;
+    width: 1600px;
     
+    justify-content: center;
+    text-align: center;
+    margin: auto;
+    margin-top: 120px;
+}
+.last-main h1{
+    font-style: bold;
+    font-size: 40px;
+    font-weight: 700px;
+    text-align: center;
 }
