--- a/style/style.css
+++ b/style/style.css
@@ -29,7 +29,7 @@
 .hero{
     width: 100%;
     height: 100vh; 
-    background-image: url("/assets/hero-bg.png");
+    background-image: url("../assets/hero-bg.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -175,7 +175,7 @@
     width: 274px;
     height: 29px;
     margin-bottom: 18px;
-    font-weight: 600px;
+    font-weight: 600;
     font-size: 24px;
    
 }
@@ -202,8 +202,8 @@
 }
 
 .banner-contain{
-    width: 700;
-    height: 396;
+    width: 700px;
+    height: 396px;
 }
 .banner-contain h5{
     color: rgb(70, 145, 101, 1);
@@ -255,6 +255,6 @@ text-align: left;
 .last-main h1{
     font-style: bold;
     font-size: 40px;
-    font-weight: 700px;
+    font-weight: 700;
     text-align: center;
 }
