--- a/style/style.css
+++ b/style/style.css
@@ -29,7 +29,7 @@
 .hero{
     width: 100%;
     height: 100vh; 
-    background-image: url("../assets/hero-bg.png");
+    background-image: url("../Sections/hero-bg.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
