--- a/style/style.css
+++ b/style/style.css
@@ -1,34 +1,38 @@
-*{
+* {
     margin: 0;
+    padding: 0;
 }
-.nav-ber{
+
+.nav-ber {
     display: flex;
     justify-content: space-around;
     padding: 16px;
     align-items: center;
 }
-.nav-ber ul{
+
+.nav-ber ul {
     list-style: none;
     display: flex;
     gap: 32px;
-    
-    
 }
-.btn button{
-    background:rgba(70, 145, 101, 1);
+
+.btn button {
+    background: rgba(70, 145, 101, 1);
     border: none;
     color: white;
     width: 164px;
     height: 44px;
     border-radius: 4px;
+    cursor: pointer;
 }
- 
-
+.btn button:hover{
+    background-color: #003319;
+    transition: 0.3s;
+}
 /* hero */
-
-.hero{
+.hero {
     width: 100%;
-    height: 100vh; 
+    height: 100vh;
     background-image: url("../Sections/hero-bg.png");
     background-size: cover;
     background-position: center;
@@ -37,13 +41,11 @@
     justify-content: center;
     align-items: center;
 }
-
-
-.hero-img-text{
+.hero-img-text {
     text-align: center;
     color: white;
 }
-.hero-img-text h4{
+.hero-img-text h4 {
     color: #30B868;
     background-color: white;
     width: 229px;
@@ -55,102 +57,121 @@
     margin: 0 auto;
     margin-bottom: 16px;
 }
-.hero-img-text h1{
+.hero-img-text h1 {
     font-size: 72px;
     font-weight: 700;
     line-height: 84px;
     text-align: center;
     font-style: bold;
-   
-    
 }
-.color-text{
+.color-text {
     color: #30B868;
     opacity: 0.9;
 }
 
-.fast{
+.fast {
     margin-top: 16px;
-    margin-bottom:16px;
+    margin-bottom: 16px;
 }
-.hero-btn1, .main-btn{
- display: inline-flex;
+
+.hero-btn1, .main-btn {
+    display: inline-flex;
     align-items: center;
     gap: 8px;
     padding: 10px 20px;
     border-radius: 4px;
     border: none;
     cursor: pointer;
-   border-radius: 4px;
-    background:rgba(70, 145, 101, 1);
+    border-radius: 4px;
+    background: rgba(70, 145, 101, 1);
     margin: 32px;
     color: white;
-   
+}
+.hero-btn1:hover{
+    background-color:#001933;
+    transition: 0.3s;
 }
 
-.main-btn{
+.main-btn {
     border-radius: 4px;
     border: none;
     cursor: pointer;
     border-radius: 4px;
-    background:rgba(70, 145, 101, 1);
+    background: rgba(70, 145, 101, 1);
     color: white;
     border-radius: 4px;
     box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
-    background: var(--#30B868, rgba(70, 145, 101, 1));
+    background:rgb(70, 145, 101, 1);
 }
-
-.hero-btn2{
+.main-btn:hover{
+    background-color: #b80777;
+    transition: 0.3s;
+}
+.icon-hero img{
+    width: 16px;
+    height: 16px;
+    margin-right: 6px;
+}
+.hero-btn2 {
     align-items: center;
     padding: 10px 20px;
+    display: flex;
     border-radius: 4px;
     margin-top: 32px;
     font-weight: bold;
     background-color: transparent;
     border: 1px solid white;
-    color:white; 
+    color: white;
     padding: 10px 20px;
-    cursor: pointer;        
+    cursor: pointer;
 }
-
-
-.button-parent{
+.hero-btn2 img{
+    width: 16px;
+    height: 16px;
+    margin-right:10px;
+}
+.hero-btn2:hover{
+    background-color:#660000 ;
+    transition: 0.2s;
+}
+.button-parent {
     display: flex;
     gap: 16px;
     background-color: transparent;
     justify-content: center;
-   
+
 }
-.main-content{
+
+.main-content {
     margin-top: 50px;
     margin-bottom: 16px;
     text-align: center;
     font-size: 48px;
 }
-.main-content p{
-    margin-top:16px;
+
+.main-content p {
+    margin-top: 16px;
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
-    color:rgba(98, 115, 130, 1);
+    color: rgba(98, 115, 130, 1);
 }
-.fast-card{
-   width: 322px;
+
+.fast-card {
+    width: 322px;
     height: 300px;
     border-radius: 8px;
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.06);
     background: rgba(255, 255, 255, 1);
-
-    display: flex;           
-    flex-direction: column;     
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;  
-    text-align: center;         
-    padding: 20px; 
-   
-    
+    align-items: center;
+    text-align: center;
+    padding: 20px;
 }
-.card{
+
+.card {
     display: flex;
     width: 1360px;
     height: 300px;
@@ -158,38 +179,37 @@
     gap: 16px;
     margin-top: 44px;
     margin-bottom: 120px;
- 
 }
-.card-icon{
+
+.card-icon {
     width: 56px;
     height: 56px;
     background: rgba(249, 85, 85, 1);
-    border-radius: 50%;     
+    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 16px;
-
 }
-.card h1{
+
+.card h1 {
     width: 274px;
     height: 29px;
     margin-bottom: 18px;
     font-weight: 600;
     font-size: 24px;
-   
 }
-.card p{
-     margin-top:16px;
+
+.card p {
+    margin-top: 16px;
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
-    color:rgba(98, 115, 130, 1);
+    color: rgba(98, 115, 130, 1);
 }
 
-
 /* banner */
-.banner{
+.banner {
     display: flex;
     width: 1360px;
     height: 600px;
@@ -198,63 +218,116 @@
     align-items: center;
     margin: auto;
     gap: 60px;
-    
 }
 
-.banner-contain{
+.banner-contain {
     width: 700px;
     height: 396px;
 }
-.banner-contain h5{
+
+.banner-contain h5 {
     color: rgb(70, 145, 101, 1);
     text-align: left;
     font-size: 16px;
     margin-bottom: 16px;
 }
-.banner-contain h1{
-width: 700px;
-height: 116px;
-font-size: 48px;
-font-style: bold;
-text-align: left;
+
+.banner-contain h1 {
+    width: 700px;
+    height: 116px;
+    font-size: 48px;
+    font-style: bold;
+    text-align: left;
 }
+
 .banner-contain p {
-    margin-top:16px;
+    margin-top: 16px;
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
-    color:rgba(98, 115, 130, 1);
+    color: rgba(98, 115, 130, 1);
     margin-bottom: 40px;
 }
-.last-main p{
+
+.last-main p {
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
-    color:rgba(98, 115, 130, 1);
+    color: rgba(98, 115, 130, 1);
 }
-.banner img{
+
+.banner img {
     border-radius: 12px;
 }
-.banner-text{
-    margin-bottom:18px ;
+
+.banner-text {
+    margin-bottom: 18px;
     display: flex;
     gap: 6px;
     font-weight: 500;
     text-align: left;
-
 }
 
-.last-main{
-    width: 1600px;
-    
+.last-main {
+    width: 1360px;
+    height: 380px;
+    background-color: #F7F6F2;
     justify-content: center;
+    align-content: center;
     text-align: center;
     margin: auto;
+    border-radius: 12px;
     margin-top: 120px;
+    margin-bottom: 120px;
 }
-.last-main h1{
+
+.last-main h1 {
     font-style: bold;
     font-size: 40px;
     font-weight: 700;
     text-align: center;
+    margin-bottom: 16px;
+}
+#main-footer {
+    display: flex;
+    background-color: rgba(0, 25, 49, 1);
+    align-items: center;
+}
+
+.parent-footer {
+    width: 1600px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.footer-logo {
+    margin-top: 120px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    width: 1360px;
+}
+
+.footer-line {
+    width: 1360px;
+    height: 2px;
+    background: white;
+    border: none;
+    margin: 40px 0;
+    opacity: 0.4;
+}
+
+.copyright {
+    margin-bottom: 40px;
+    color: white;
+    text-align: center;
+    font-size: 14px;
+}
+
+.footer-logo-text {
+    color: white;
+    font-size: 20px;
+    margin-bottom: 16px;
 }
